# ssb-flumeview-sql

./: .gitignore  README.md  bench-results-define-properties-in-value-too.txt  bench-results-define-properties.txt  bench-results-serde-cbor.txt  bench-results-serde_json.txt  bench-results-ssb-msg-data.txt  bench-results.txt  binding.gyp  build-native.sh  index.js  message.json  modifiers.js  package-lock.json  package.json
native/: CMakeLists.txt  Cargo.toml  Cross.toml  Makefile.toml  binding.node  cbindgen.toml
native/benches/: bench.rs
native/src/: binding.cc  flume_view_sql.rs  lib.rs  value.rs
native/src/errors/: mod.rs
native/src/flume_view_sql/: abouts.rs  authors.rs  blob_links.rs  blobs.rs  branches.rs  contacts.rs  keys.rs  links.rs  mentions.rs  messages.rs  migrations.rs  mod.rs  queries.rs  votes.rs
native/src/napi/: mod.rs
native/src/napi_sys/: bindings.rs  mod.rs  node_api.h  regen-bindings.sh
test/: benchmark.js  example_queries.js  index.js  modifiers.js  simple.json  weird-failure.json
