[package]
name = "ssb-sql-napi"
version = "1.0.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
license = "AGPL3"

[lib]
name = "ssb_sql_napi"
crate-type = ["staticlib"]

[dependencies]
failure = "0.1.3"
failure_derive = "0.1.3"
serde = "1.0.80"
serde_derive = "1.0.80"

[dependencies.node_napi] 
path = "../../node-napi"

[dependencies.flumedb] 
path = "../../flumedb_rs"
